# sql_management_test

./: Dockerfile  README.md  get_pr_diff.sh  google_drive.py  main.py  notification_to_slack.py  pyproject.toml  search_upload_files.py  sql_format.sh  test1.sql
.github/workflows/: sql_template_sync.yml
sql_template/: test_20220711.sql  テスト.sql
sql_template/sql/: test2.sql
sql_template/エスキューエル/: テスト1.sql
